<resources>
    <string name="app_name">RampasImage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_registros">Registros</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="open">open</string>
    <string name="close">close</string>


    <string name="signup">SignUp</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="loginhere">Already have an account? <u>Login</u></string>
    <string name="signuphere">Create a new account? SignUp</string>

    <string name="ip">http://ip/upload_file/RestApi/wsJSONConsultarLista.php</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>